# consultingutils

./: README.md  pips.bat  pyproject.toml  setup.py
consultingutils/agents/: agents.py
consultingutils/chain/: chain.py
consultingutils/db/: db.py
consultingutils/eam/: eam.py
consultingutils/llmtemplates/: llmtemplates.py
consultingutils/reporting/: reporting.py
consultingutils/storeprocedure/: storeprocedure.py
output/: CONTPURCH_CHAARO_1465406746_rptdesignAndSQL.txt  CONTPURCH_CLANCYJ_1465239216_rptdesignAndSQL.txt  INVENTOR_GOWENW_1458159830_rptdesignAndSQL.txt  output.csv
tests/: requirement.conf  test_chain.py  test_db.py  test_eam.py  test_llmtemplates.py  test_reporting.py
